Update API for the evaluator
